<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/app"
        android:layout_width="368dp"
        android:layout_height="526dp"
        android:background="@color/app_backg"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:background="@color/titlecolo"
            android:text="@string/AppTitle"
            android:textColor="@color/titletxtcolo"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txt_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:text="@string/txtChaneg"
            android:textColor="@color/txt_list_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt20per"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/txtTitle"
            android:layout_marginTop="96dp"
            android:text="@string/txt20per"
            android:textColor="@color/txt_list_color" />

        <TextView
            android:id="@+id/txt15per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/txtTitle"
            android:layout_marginTop="132dp"
            android:text="@string/txt15per"
            android:textColor="@color/txt_list_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt10per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/txtTitle"
            android:layout_marginTop="174dp"
            android:text="@string/tat10per"
            android:textColor="@color/txt_list_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtspec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/txtTitle"
            android:layout_marginTop="214dp"
            android:text="@string/txtown"
            android:textColor="@color/txt_list_color"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imgae"
            android:layout_width="252dp"
            android:layout_height="171dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="106dp"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/splitbill1" />

        <Button
            android:id="@+id/btnEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="36dp"
            android:background="@color/titlecolo"
            android:text="@string/btnEnter"
            android:textColor="@color/titletxtcolo"
            android:textSize="30sp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>