<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Split_Bill_App">

    <RelativeLayout
        android:id="@+id/app_bkg"
        android:layout_width="368dp"
        android:layout_height="526dp"
        android:background="@color/app_backg"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/txt_split_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:background="@color/titlecolo"
            android:text="@string/txtTitle_Split"
            android:textColor="@color/titletxtcolo"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txt_Sub_title_Split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="85dp"
            android:background="@color/titlecolo"
            android:text="@string/txtinfo"
            android:textAlignment="center"
            android:textColor="@color/titletxtcolo"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/txtTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="140dp"
            android:entries="@array/txtTip"
            android:prompt="@string/txtPromt" />

        <EditText
            android:id="@+id/txtOtherTip"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/txt_Sub_title_Split"
            android:layout_alignTop="@+id/txtTip"
            android:layout_marginEnd="14dp"
            android:ems="10"
            android:hint="@string/txtOtherTip"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtPercent"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_alignBottom="@+id/txtTip"
            android:layout_marginStart="-14dp"
            android:layout_toEndOf="@+id/txtOtherTip"
            android:text="%"
            android:textColor="@color/titletxtcolo"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/txtPeople"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/txt_Sub_title_Split"
            android:layout_alignParentTop="true"
            android:layout_marginTop="199dp"
            android:ems="10"
            android:hint="@string/txtPeople"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtAmount"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txtDoleersing"
            android:ems="10"
            android:hint="@string/txtAmount"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtDoleersing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtPeople"
            android:layout_alignParentStart="true"
            android:layout_marginStart="160dp"
            android:text="$"
            android:textColor="@color/titletxtcolo"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp"
            app:srcCompat="@drawable/splitbill2" />

        <Button
            android:id="@+id/btnSplitBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAmount"
            android:layout_centerHorizontal="true"
            android:background="@color/titlecolo"
            android:text="@string/btnSplitBill"
            android:textColor="@color/titletxtcolo"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="199dp"
            android:text="*"
            android:textSize="18sp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>